# reelm

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-03-23-household-memory.md  2026-03-24-openviking-memory.md
docs/superpowers/specs/: 2026-03-23-household-memory-design.md  2026-03-24-openviking-memory-design.md
gateway/: Dockerfile  config.yaml
scripts/: check-compose.py  check-file-length.py  check-json.py  dokctl  dokctl.py
src/mcps/: config.py  gateway.py  server.py
src/mcps/servers/: jackett.py  memory.py  skills.py  storage.py  tmdb.py  transmission.py
src/mcps/shared/: query.py  schema.py  torrent.py
tests/: test_gateway_proxy.py  test_gateway_tools.py  test_jackett_unit.py  test_memory_unit.py  test_query.py  test_skills_unit.py  test_storage_unit.py  test_torrent_unit.py  test_transmission_tools_unit.py  test_transmission_unit.py
tests/snapshots/: jackett.json  tmdb.json  transmission.json
