[project]
name = "mcps"
version = "0.1.0"
description = "Remote MCP servers for media management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.4",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "transmission-rpc>=8.0.0a4",
    "tmdbsimple>=2.9.1",
    "xmltodict>=1.0.2",
    "jmespath>=1.1.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "anyascii>=0.3.3",
    "loguru>=0.7.3",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcps"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
pythonpath = ["src"]
markers = [
    "contract: contract tests (VCR replay)",
    "unit: unit tests",
]
