[project]
name = "reelm"
version = "0.2.0"
description = "Your personal media agent — AI-native alternative to Sonarr/Radarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "transmission-rpc>=8.0.0a4",
    "tmdbsimple>=2.9.1",
    "xmltodict>=1.0.2",
    "common-expression-language>=0.5.0",
    "bencodepy>=0.9.4",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
    "anyascii>=0.3.3",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a7",
    "pip-audit>=2.9.0",
    "yamllint>=1.37.0",
    "diff-cover>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcps"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py312"
line-length = 140
output-format = "concise"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    # ── PREVENT: hard errors, no ambiguity ──
    "F",         # pyflakes — undefined names, unused imports
    "S",         # flake8-bandit — security
    "T10",       # flake8-debugger — leftover pdb/breakpoint()
    "T20",       # flake8-print — leftover print()
    "BLE",       # flake8-blind-except — bare except:
    "PGH",       # pygrep-hooks — blanket type: ignore, eval()

    # ── ENFORCE: deterministic style, auto-fixable ──
    "E", "W",    # pycodestyle
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "C4",        # flake8-comprehensions
    "PIE",       # flake8-pie
    "TC",        # flake8-type-checking
    "PTH",       # flake8-use-pathlib
    "FURB",      # refurb
    "RUF",       # ruff-specific

    # ── DETECT: flags potential problems ──
    "B",         # flake8-bugbear
    "A",         # flake8-builtins
    "DTZ",       # flake8-datetimez
    "ISC",       # flake8-implicit-str-concat
    "RET",       # flake8-return
    "SIM",       # flake8-simplify
    "ARG",       # flake8-unused-arguments
    "PERF",      # perflint
    "LOG",       # flake8-logging
    "G",         # flake8-logging-format
    "SLF",       # flake8-self
    "TID",       # flake8-tidy-imports
    "PL",        # pylint subset

    # ── STRUCTURE: clean architecture enforcement ──
    "C90",       # mccabe — cyclomatic complexity
    "EM",        # flake8-errmsg
    "FBT",       # flake8-boolean-trap
    "PT",        # flake8-pytest-style
]
ignore = [
    # Readability — agent rewrites hurt more than they help
    "SIM108",    # ternary — often hurts readability
    "SIM110",    # any() rewrite — comprehension often clearer
    "RUF001",    # ambiguous unicode — intentional Cyrillic (Russian alt titles)
    "RUF015",    # next(iter()) vs [0] — readability preference

    # Too strict — valid patterns flagged
    "EM101",     # string literal in exception
    "EM102",     # f-string in exception
    "FBT001",    # boolean positional arg def
    "FBT002",    # boolean default value
    "PLR0913",   # too many arguments — config constructors
    "PLR2004",   # magic value comparison — thresholds, HTTP status codes
    "ARG001",    # unused function argument — fixtures, callbacks

    # Agent-hostile — causes harmful refactoring
    "A003",      # class attribute shadows builtin — Pydantic models use id, type, input
    "PT001",     # @pytest.fixture() vs @pytest.fixture — pure style
    "PT023",     # @pytest.mark.unit() vs @pytest.mark.unit — pure style
    "PERF203",   # try/except in loop — conflicts with fail-soft pattern
    "RET504",    # unnecessary assignment before return — useful for debugging
    "PLW2901",   # loop variable overwritten — line = line.strip() is fine
    "PLW0603",   # global statement — lazy init singleton pattern is valid
]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 50
max-branches = 10
max-returns = 6

[tool.ruff.lint.per-file-ignores]
"src/mcps/servers/skills.py" = [
    "E501",      # line length — embedded markdown content
]
"tests/**" = [
    "S101",      # assert — standard in tests
    "S106",      # hardcoded passwords — test fixtures
    "E402",      # import order — env setup before imports
    "ARG001",    # unused arguments — pytest fixtures
    "PLR2004",   # magic values — test assertions
    "SLF001",    # private member access — testing internals
    "PT011",     # pytest.raises too broad
    "PLR0915",   # too many statements — long test scenarios
    "PLC0415",   # import not at top-level — env setup before imports
    "A002",      # shadow builtins — test helpers use `id` parameter
    "FBT003",    # boolean positional — test calls
    "ARG005",    # unused lambda argument — test mocks
    "PT006",     # parametrize tuple type — style preference
    "RET505",    # unnecessary elif after return — readability in test helpers
]

[tool.ty.environment]
python-version = "3.12"
python = "./.venv"
root = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --cov --cov-report=term:skip-covered --cov-report=xml --cov-fail-under=94"
pythonpath = ["src"]
markers = [
    "unit: unit tests",
    "contract: external API verification",
]

[tool.coverage.run]
source = ["src/mcps"]
branch = true
omit = ["src/mcps/gateway.py"]

[tool.coverage.report]
show_missing = false
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "\\.\\.\\.",
]
